--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f85c70" />
+    <meta name="theme-color" content="#abb8c3" />
     <meta
       name="description"
       content="Web site created using create-react-app"
